# veilbox

./: .gitignore  AUDIT.md  DISCLAIMER.md  Dockerfile  ETHICS.md  INTEGRATIONS.md  INTEROP.md  README.md  SECURITY.md  SOURCES.md  docker-compose.yml  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
config/: veilbox.example.yaml
demos/01-basic/: SCENARIO.md  signals-clean.json  signals-leaking.json
docker/: entrypoint.sh
examples/: help.txt  version.txt
tests/: test_connect.py  test_deep.py  test_hardening.py  test_smoke.py  test_vectors.py
veilbox/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
