[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-veilbox"
version = "0.1.1"
description = "Self-hosted, zero-telemetry anti-fingerprint privacy container with a built-in attribution/leak self-audit"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["privacy", "anti-fingerprint", "opsec", "anti-detect", "leak-audit", "cognis-digital", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/veilbox"

[project.scripts]
"veilbox-emit" = "veilbox.connect:emit_main"
veilbox = "veilbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["veilbox"]
